# tusistor

./: .woodpecker.yaml  Cargo.toml  LICENSE  README.md  tab1.tape  tab2.tape
.github/: README.md
.github/workflows/: ci.yml
rusistor/: Cargo.toml  README.md
rusistor/examples/: basic_usage.rs
rusistor/src/: lib.rs
src/: app.rs  main.rs
tusistor/: Cargo.toml
tusistor-core/: Cargo.toml  README.md
tusistor-core/src/: model.rs  update.rs  view.rs
tusistor-web/: Cargo.toml  Trunk.toml  index.html
tusistor-web/src/: input.rs  main.rs  model.rs  update.rs  view.rs
tusistor/src/: app.rs  main.rs  model.rs  update.rs  view.rs
