[workspace]

[workspace.package]
authors = ["dawe <dawedawe@posteo.de>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/dawedawe/tusistor"

[package]
name = "tusistor"
version = "0.2.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "This is a Ratatui app to calculate the color code of electrical resistors."

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-input = "0.11.1"
rusistor = { path = "rusistor", version = "0.2.0" }
