[package]
name = "tusistor-core"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "This crate provides shared code for tusistor and tusistor-web."

[dependencies]
rusistor = { path = "../rusistor", version = "0.3.0" }
engineering-repr = "1.1.1"
