[package]
name = "tusistor-web"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "This is a Ratzilla app to calculate the color code of electrical resistors."

[dependencies]
rusistor = { path = "../rusistor", version = "0.3.1" }
tusistor-core = { path = "../tusistor-core", version = "0.1.0" }
engineering-repr = "1.1.0"
ratzilla = "0.0.3"
